libs/parser/testdata/errors/inline_ref_invalid_alias.csl
infrastructure:
	# Invalid alias character (space in alias)
	bad_ref: reference:invalid alias:path.to.value
